--- a/node-apps/InternetOff/package.json
+++ b/node-apps/InternetOff/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "mongodb": "^3.6.6",
-    "socket.io": "^4.0.1"
+    "socket.io": "^2.3.0"
   }
 }
