Add extra style

--- a/node-apps/internet_off_frontend/Dockerfile
+++ b/node-apps/internet_off_frontend/Dockerfile
@@ -3,6 +3,8 @@ WORKDIR /frontend
 COPY package*.json ./
 RUN npm install
 COPY . .
+ENV TZ=Asia/Kolkata
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 EXPOSE 9052/tcp
 EXPOSE 9052/udp
 CMD [ "npm", "start" ]
