--- a/node-apps/internet_off_frontend/package.json
+++ b/node-apps/internet_off_frontend/package.json
@@ -18,6 +18,7 @@
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "tailwindcss": "^2.1.1"
   }
 }
