--- a/node-apps/internet_off_frontend/package.json
+++ b/node-apps/internet_off_frontend/package.json
@@ -15,7 +15,8 @@
     "lodash": "^4.17.21",
     "mongodb": "^3.6.6",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
