--- a/esp32s-wroom/InternetOff/platformio.ini
+++ b/esp32s-wroom/InternetOff/platformio.ini
@@ -12,4 +12,7 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-lib_deps = bblanchon/ArduinoJson@^6.17.3
+lib_deps = 
+	links2004/WebSockets
+
+
