--- a/esp32s-wroom/pir_motion/platformio.ini
+++ b/esp32s-wroom/pir_motion/platformio.ini
@@ -8,8 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu-32s]
+[env:stable]
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-lib_deps = bblanchon/ArduinoJson@^6.17.3
+lib_deps = 
+	links2004/WebSockets
