--- a/wemos-d1-r2/SocketIO/socketiotry/platformio.ini
+++ b/wemos-d1-r2/SocketIO/socketiotry/platformio.ini
@@ -8,8 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu-32s]
-platform = espressif32
-board = nodemcu-32s
+[env:d1_mini]
+platform = espressif8266
+board = d1_mini
 framework = arduino
-lib_deps = bblanchon/ArduinoJson@^6.17.3
+lib_deps = links2004/WebSockets@^2.3.6
