--- a/wemos-d1-r2/multi_color_led_mwot/platformio.ini
+++ b/wemos-d1-r2/multi_color_led_mwot/platformio.ini
@@ -12,3 +12,6 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
+lib_deps = 
+	webthingsio/webthing-arduino@^0.12.0
+	ottowinter/ESPAsyncWebServer-esphome@^1.2.7
