--- a/wemos-d1-r2/SocketIO/socketiotry/platformio.ini
+++ b/wemos-d1-r2/SocketIO/socketiotry/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
-lib_deps = links2004/WebSockets@^2.3.6
+lib_deps = 
+	links2004/WebSockets@^2.3.6
+	bblanchon/ArduinoJson@^6.21.0
